@@ -12,36 +12,38 @@ import org.springframework.web.bind.annotation.*;
 public class TestController {
 
   @GetMapping("/config/topics")
-  public ResponseEntity<List<Topic>> getTopics() {
-    final List<Topic> topics = Arrays.asList(new Topic(1, "SHAPE_CODE"));
-    System.out.println("client2 topics " + topics);
+  public ResponseEntity<List<Topic>> getTopics(@RequestHeader(value = "Authorization", required = false) String token) {
+    final List<Topic> topics = List.of(new Topic(1, "JOB_QUEUE"));
+    System.out.println("client2 topics " + topics + " - token " + token);
     return ResponseEntity.ok(topics);
   }
 
   @GetMapping("/config/topics/{topicName}")
-  public ResponseEntity<String> getTopic(@PathVariable String topicName) {
-    System.out.println("client2 Test OK " + topicName);
+  public ResponseEntity<String> getTopic(@RequestHeader(value = "Authorization", required = false) String token,
+                                         @PathVariable String topicName) {
+    System.out.println("client2 Test OK " + topicName + " - token " + token);
     return ResponseEntity.ok("client2 test OK " + topicName);
   }
 
   @GetMapping("/config/types/{typeId}")
-  public ResponseEntity<String> getConfigType(@RequestHeader(value = "Authorization", required = false) String token, @PathVariable Integer typeId) {
-    System.out.println("client2 Test OK " + typeId);
-    return ResponseEntity.ok("client2 test OK " + typeId + " + token " + token);
+  public ResponseEntity<String> getConfigType(@RequestHeader(value = "Authorization", required = false) String token,
+                                              @PathVariable Integer typeId) {
+    System.out.println("client2 Test OK " + typeId + " - token " + token);
+    return ResponseEntity.ok("client2 test OK " + typeId + " - token " + token);
+  }
+
+  @PostMapping("/config/types/{typeId}")
+  public ResponseEntity<String> getConfigType(@RequestHeader(value = "Authorization", required = false) String token,
+                                              @PathVariable Integer typeId,
+                                              @RequestBody TestPayload payload) {
+    System.out.println("POST client2 Test OK " + typeId + " - token " + token + " - payload " + payload);
+    return ResponseEntity.ok("client2 test OK " + typeId + " - token " + token + " - payload " + payload);
   }
 
   @GetMapping("/config/test/exception")
   public ResponseEntity<String> getException(@RequestHeader(value = "Authorization", required = false) String token) {
     System.out.println("client2 Test exception " + token);
     return ResponseEntity.status(HttpStatus.UNAUTHORIZED).body("Test exception");
-  }
-
-  @PostMapping("/config/types/{typeId}")
-  public ResponseEntity<String> getConfigType(@RequestHeader(value = "Authorization", required = false) String token,
-      @PathVariable Integer typeId,
-      @RequestBody TestPayload payload) {
-    System.out.println("POST client2 Test OK " + typeId + " " + payload);
-    return ResponseEntity.ok("client2 test OK " + typeId + " + token " + token + " payload " + payload);
   }
 
   @GetMapping("/test")
